# FastAPI_1

./: items_views.py  main.py  pyproject.toml
users/: schemas.py  views.py
